k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caching-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8082
  selector:
    app: caching-server
  type: ClusterIP
