k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: delaywise-ingress
  namespace: delaywise
spec:
  ingressClassName: nginx
  rules:
    - host: delaywise.mcnamee.io
      http:
        paths:
          - backend:
              service:
                name: caching-server
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - delaywise.mcnamee.io
      secretName: delaywise-ssl
